avoided the use of activiti-api
after moving the interfaces in the same repositories containing the implementations, I have removed the dependencies in the pom files of the activiti-api project.

Since there was a cyclic dependency due to this removal, I created the UserGroupManager class in the activiti-engine.